--- a/src/09-complex-application/app/components/signals-cards/signals-cards.component.hbs
+++ b/src/09-complex-application/app/components/signals-cards/signals-cards.component.hbs
@@ -1,1 +1,58 @@
-<h1>Hola mundo!</h1>
+<div class="container">
+    <div class="b-content">
+        <div class="content">
+            <h1 class="padding-top-sm">Signals</h1>
+        </div>
+
+        <div class="content">
+            <div class="field">
+                <div class="control">
+                    <div class="select">
+                        <select name="signalTypes" id="signalTypes">
+                            <option value="-1">Filtrar por tipo:</option>
+                            {{#each signalTypes}}
+                                <option value="{{ id }}">{{ name }}</option>
+                            {{/each}}
+                        </select>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="columns is-multiline">
+            {{#each signals}}
+                <div class="column is-one-quarter-desktop is-one-third-tablet">
+
+                    <div class="b-signal b-signal--list-item">
+                        <div class="card">
+                            <div class="card-image">
+                                <a href="#">
+                                    <figure class="image b-signal__figure">
+                                        <img src="http://projects-api.webtraining.zone/traffic-signals-images/sct/{{ filename }}"
+                                             alt="{{ name }}" class="b-signal__image">
+                                    </figure>
+                                </a>
+                            </div>
+
+                            <div class="card-content">
+                                <div class="media">
+                                    <div class="media-content">
+                                        <p class="b-signal__title title is-4">
+                                            <a class="b-signal__title-link">
+                                                {{ name }}
+                                            </a>
+                                        </p>
+                                        <p class="b-signal__subtitle subtitle is-6">
+                                            {{ summary }}
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            {{/each}}
+        </div>
+    </div>
+</div>
