--- a/src/09-complex-application/app/components/signals-cards/signals-cards.component.hbs
+++ b/src/09-complex-application/app/components/signals-cards/signals-cards.component.hbs
@@ -28,7 +28,7 @@
                             <div class="card-image">
                                 <a href="#">
                                     <figure class="image b-signal__figure">
-                                        <img src="http://projects-api.webtraining.zone/traffic-signals-images/sct/{{ filename }}"
+                                        <img src="{{ imageURL }}"
                                              alt="{{ name }}" class="b-signal__image">
                                     </figure>
                                 </a>
